ui fixes:
* truncate builds list after reinitialize BuildsCtrl
* filter by subscription in user_repos
* load more in user_repos

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,7 @@ div.ajax-loader-b {
   white-space: pre;
 }
 
+.label-pointer {
+  cursor: pointer;
+}
+
