--- a/app/assets/stylesheets/ui_switch.css.scss
+++ b/app/assets/stylesheets/ui_switch.css.scss
@@ -127,12 +127,12 @@ input.cmn-toggle-round-flat:disabled + label {
     padding: 0px;
     width:  50px;
     height: 20px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    -ms-border-radius: 0px;
-    -o-border-radius: 0px;
-    border-radius: 0px;
-    background-color: #ccc;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+    background-color: #bbb;
   }
 
   input.cmn-toggle-round-flat + label:before {
@@ -140,36 +140,34 @@ input.cmn-toggle-round-flat:disabled + label {
     left: 1px;
     bottom: 1px;
     right: 1px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    -ms-border-radius: 0px;
-    -o-border-radius: 0px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
   }
 
   input.cmn-toggle-round-flat + label:after {
-    top: 1px;
-    left: 1px;
-    bottom: 1px;
-    width: 22px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    -ms-border-radius: 0px;
-    -o-border-radius: 0px;
-    border-radius: 0px;
-    background-color: #ccc;
+    top: 2px;
+    left: 2px;
+    bottom: 2px;
+    width: 17px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+    background-color: #bbb;
   }
 
   input.cmn-toggle-round-flat:checked + label:after {
-    margin-left: 26px;
+    margin-left: 29px;
   }
 
   input.cmn-toggle-round-flat:checked + label {
-    background-color: #8ce196;
-    background-color: #1AB394;
+    background-color: #18a78a;
   }
   input.cmn-toggle-round-flat:checked + label:after {
-    background-color: #8ce196;
-    background-color: #1AB394;
+    background-color: #18a78a;
   }
 }
 
